# imgur_album_downloader

./: .gitignore  README.md  app.py  downloader.py  pyproject.toml
scripts/: checks.py  downloader.py
static/: style.css
static/js/: main.js
templates/: layout.html  main.html
